src/snapshots/tptp__tests__fof_unitary_formula-3.snap
---
source: src/tests.rs
expression: parsed

---
Atomic(
    Defined(
        Plain(
            DefinedPlainFormula(
                Constant(
                    DefinedConstant(
                        DefinedFunctor(
                            AtomicDefinedWord(
                                DollarWord(
                                    LowerWord(
                                        "true",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
