src/snapshots/tptp__tests__fof_unitary_formula.snap
---
source: src/tests.rs
expression: parsed
---
Parenthesised(
    Unitary(
        Atomic(
            Defined(
                Plain(
                    DefinedPlainFormula(
                        DefinedPlainTerm(
                            DefinedConstant(
                                DefinedFunctor(
                                    AtomicDefinedWord(
                                        DollarWord(
                                            LowerWord(
                                                "true",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
