src/snapshots/tptp__tests__fof_variable_list-3.snap
---
source: src/tests.rs
expression: parsed

---
VariableList(
    [
        Variable(
            UpperWord(
                "X",
            ),
        ),
        Variable(
            UpperWord(
                "Y",
            ),
        ),
    ],
)
