src/snapshots/tptp__tests__fof_variable_list-5.snap
---
source: src/tests.rs
expression: parsed
---
VariableList(
    [
        Variable(
            UpperWord(
                "X",
            ),
        ),
        Variable(
            UpperWord(
                "Y",
            ),
        ),
        Variable(
            UpperWord(
                "Z",
            ),
        ),
    ],
)
