src/snapshots/tptp__tests__fof_variable_list.snap
---
source: src/tests.rs
expression: parsed
---
VariableList(
    [
        Variable(
            UpperWord(
                "X",
            ),
        ),
    ],
)
