src/snapshots/tptp__tests__formula_data-3.snap
---
source: src/tests.rs
expression: parsed
---
Cnf(
    Disjunction(
        Disjunction(
            [
                Atomic(
                    Plain(
                        FofPlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
