src/snapshots/tptp__tests__formula_data-5.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Cnf(
    Disjunction(
        Disjunction(
            [
                Atomic(
                    Plain(
                        PlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
