src/snapshots/tptp__tests__formula_data-7.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Fot(
    Function(
        Plain(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "t",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
