src/snapshots/tptp__tests__formula_data.snap
---
source: src/tests.rs
expression: parsed
---
Fof(
    Formula(
        Unitary(
            Atomic(
                Plain(
                    PlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
