src/snapshots/tptp__tests__formula_role-3.snap
---
source: src/tests.rs
expression: parsed
---
FormulaRole(
    LowerWord(
        "conjecture",
    ),
)
