src/snapshots/tptp__tests__formula_role.snap
---
source: src/tests.rs
expression: parsed
---
FormulaRole(
    LowerWord(
        "axiom",
    ),
)
